--- a/package.json
+++ b/package.json
@@ -18,19 +18,26 @@
     "@emotion/react": "11.13.0",
     "@emotion/styled": "11.13.0",
     "@floating-ui/react": "0.26.20",
+    "@headlessui/react": "^2.2.0",
     "@mui/lab": "5.0.0-alpha.172",
     "@mui/material": "5.16.4",
     "@mui/material-nextjs": "5.16.4",
     "@reduxjs/toolkit": "^2.5.1",
     "classnames": "2.5.1",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
+    "i18next-browser-languagedetector": "^8.0.4",
     "keen-slider": "^6.8.6",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "next-cloudinary": "^6.16.0",
     "react": "18.3.1",
     "react-colorful": "5.6.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
+    "react-intersection-observer": "^9.15.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
