--- a/package.json
+++ b/package.json
@@ -14,80 +14,79 @@
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
-    "@emotion/cache": "11.13.0",
-    "@emotion/react": "11.13.0",
-    "@emotion/styled": "11.13.0",
-    "@floating-ui/react": "0.26.20",
+    "@emotion/cache": "^11.13.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@floating-ui/react": "^0.26.20",
     "@headlessui/react": "^2.2.0",
-    "@mui/lab": "5.0.0-alpha.172",
-    "@mui/material": "5.16.4",
-    "@mui/material-nextjs": "5.16.4",
-    "@reduxjs/toolkit": "^2.5.1",
+    "@iconify/tools": "^4.1.2",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.4",
+    "@mui/material-nextjs": "^7.1.0",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/leaflet": "^1.9.16",
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.2.0",
+    "@types/three": "^0.162.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "aos": "^2.3.4",
-    "classnames": "2.5.1",
-    "firebase": "^11.3.1",
+    "autoprefixer": "^10.4.19",
+    "classnames": "^2.5.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "firebase": "^10.8.0",
     "framer-motion": "^12.4.7",
     "i18next-browser-languagedetector": "^8.0.4",
     "keen-slider": "^6.8.6",
-    "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-cloudinary": "^6.16.0",
-    "react": "18.3.1",
+    "postcss": "^8.4.40",
+    "postcss-styled-syntax": "^0.6.4",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
-    "react-colorful": "5.6.1",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^8.0.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.33.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.4.1",
     "react-intersection-observer": "^9.15.1",
     "react-leaflet": "^4.2.1",
-    "react-perfect-scrollbar": "1.5.8",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-swipeable": "^7.0.2",
-    "react-toastify": "^11.0.3",
-    "react-use": "17.5.1",
+    "react-toastify": "^11.0.5",
+    "react-use": "^17.5.1",
     "react-youtube": "^10.1.0",
     "recharts": "^2.15.1",
-    "server-only": "0.0.1",
+    "stylelint": "^16.7.0",
+    "stylelint-use-logical-spec": "^5.0.1",
+    "stylis": "^4.3.2",
+    "stylis-plugin-rtl": "^2.1.1",
+    "three": "^0.176.0",
+    "three-mesh-bvh": "^0.8.0",
+    "typescript": "^5.5.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@iconify/json": "2.2.230",
-    "@iconify/tools": "4.0.4",
-    "@iconify/types": "2.0.0",
-    "@iconify/utils": "2.1.25",
-    "@types/aos": "^3.0.7",
-    "@types/leaflet": "^1.9.16",
-    "@types/node": "^20.14.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "2.29.1",
-    "postcss": "8.4.40",
-    "postcss-styled-syntax": "0.6.4",
-    "prettier": "3.3.3",
-    "stylelint": "16.7.0",
-    "stylelint-use-logical-spec": "5.0.1",
-    "stylis": "4.3.2",
-    "stylis-plugin-rtl": "2.1.1",
-    "tailwindcss": "3.4.6",
-    "tailwindcss-logical": "3.0.1",
-    "tsx": "4.16.2",
-    "typescript": "5.5.4"
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-logical": "^3.0.1",
+    "tsx": "^4.19.4"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   },
   "resolutions": {
-    "rimraf": "^5.0.7"
-  },
-  "overrides": {
-    "rimraf": "^5.0.7"
+    "three-mesh-bvh": "^0.8.0"
   }
 }
